Overflow hidden fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   text-align: center;
   background-color: rgb(31, 31, 31);
   height: 100vh;
-  overflow: hidden;
 }
 
 .page-header {
